Added toggleable gradient animation and made the code cleaner and more efficient

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<canvas id = "canvas_1" width = 900 height = 900 style="border: 8px solid darkgreen; background-color: black"></canvas>
+<canvas id = "canvas1"></canvas>
+<button id = "gradient" onclick = "toggleGradientMovement()">Start gradient</button>
+<button onclick = "increment()">Iteration++</button>
 <script src="GenerateFractal.js"></script>
-<button onclick = "increment()">Click me</button>
 </body>
 </html>
